# sulfur-tracker

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  secrets.yaml.example
.claude/: launch.json
data/: sulfur_tracker.db
sulfur_tracker/: __init__.py  __main__.py  config.py  dashboard.py  db.py  history.py  llm.py  paths.py  report.py  scoring.py  secrets.py  seeds.py  signal.py
sulfur_tracker/collectors/: __init__.py  _tradingeconomics.py  ais_gulf_transits.py  base.py  china_port_inventory.py  fob_prices_mideast.py  fred_acid.py  indonesia_imports.py  llm_price_scan.py  news_monitor.py  sulfur_price_cn.py
tests/: conftest.py  test_collectors_fred.py  test_collectors_indonesia.py  test_collectors_news.py  test_collectors_sulfur_price.py  test_db.py  test_history.py  test_llm_price_scan.py  test_scoring.py  test_seeds.py  test_signal.py
tests/fixtures/: comtrade_360_2503.json  mining_rss.xml  te_sulfur.html
