[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sulfur-tracker"
version = "0.1.0"
description = "Bi-weekly composite tracker for the 2026 Hormuz sulfur supply disruption, read from downstream receiving-end signals"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "PyYAML>=6.0",
    "plotly>=5.20",
    "streamlit>=1.38",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tracker = "sulfur_tracker.__main__:main"

[tool.setuptools.packages.find]
include = ["sulfur_tracker*"]
